--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -60,6 +60,23 @@
             <h4>Historical Methods</h4>
             <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf">Working paper historical methods (en) </a>
           </div>
+      </div>
+      <div class="spaceBetweenParagraphs noFloat">&bull;</div>
+      <div class="row workingPaperContainer">
+        <div class="col-md-6"> 
+          Le projet RICardo a été initié en 2004 par une équipe d’historiens économistes de Sciences Po dans le but de constituer une base historique de données commerciales. Il est parti du constat que les bases de données existantes étaient généralement construites par des chercheurs isolés pour les besoins d’un travail  de recherche personnel, qu’elles ne couvraient pas l’ensemble des pays du monde, qu’elles ne remontaient pas avant 1870 et qu’elles ne pouvaient être utilisées que par un public spécialisé. Dix ans plus tard, une nouvelle équipe associant historiens, développeurs et designers de Sciences Po élargit le projet à la création d’un site dédié au commerce bilatéral des pays du monde sur la période 1800-1938 (1).
+
+          (1) Depuis la fin de la Seconde Guerre mondiale, ces statistiques sont rassemblées et publiées par les organisations internationales : base Direction of Trade Statistics du FMI (données à partir de 1947) (https://data.imf.org/); base Comtrade des Nations-Unies (données à partir de 1962) (http://comtrade.un.org/). 
+
+        </div>
+        <div class="col-md-6"> 
+          L’objectif du projet RICardo est de collecter des données sur le commerce bilatéral de tous les pays du monde à partir du début du XIXe siècle (les premières données de la base remontent jusqu’en 1787) jusqu’en 1938 et de les mettre à la disposition d’un large public pour une large palette d’utilisations.  
+          Les vizs RICardo permettent de savoir en « un-click » quelles ont été les exportations de l’Inde vers la France en 1841, comment évolue le commerce total de la Chine entre 1864 et 1913, ou encore d’avoir une estimation des exportations mondiales sur la période 1830-1938. Elle facilite l’accès à une vision historique et synthétique du commerce international tout en offrant aux chercheurs spécialisés la possibilité d’exploiter les données pour une recherche plus approfondie. 
+          La base RICardo est une base évolutive. Notre ambition est de continuer à l’améliorer et à la compléter en recueillant de nouvelles sources statistiques commerciales. C’est pourquoi nous invitons les utilisateurs de la base à nous faire part de leurs remarques et à participer à l’évolution de la base.
+
+          (1) Mettre une adresse de contact
+        </div>
+
         </div>
       </div>
       <div id="studies" class="page">
@@ -80,9 +97,9 @@
 
                 <a ng-href="">
                 <div class="slInfo">
-                  <h5 class="slTitle">Reporting & Partner</h5>
+                  <h5 class="slTitle">Trade flows</h5>
                   <p class="slPara">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. Curabitur auctor nisi non aliquam facilisis. Aliquam at pretium eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut ullamcorper massa. Donec consequat, orci at vulputate porta, purus nisl vulputate ante, eu rutrum dui lectus ac lectus. Proin non orci tincidunt, placerat dolor non, pulvinar risus.
+                    Trade flows are values of merchandise exports or imports. The RICardo database combines two sets of data: bilateral trade data are the distribution of total trade of a reporting country with its partner countries; total trade data are the sum of all bilateral exports/imports. Data from the original sources reproduced in the database are quoted in many different currencies. Trade flows have all been converted into sterling pound by using the RICardo exchange rate database.
                   </p>
 
                 </div>
@@ -96,8 +113,8 @@
                 </div> -->
 
                 <a ng-href=""><div class="slInfo">
-                  <h5 class="slTitle">World trade agregation</h5>
-                  <p class="slPara"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. Curabitur auctor nisi non aliquam facilisis. Aliquam at pretium eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut ullamcorper massa. Donec consequat, orci at vulputate porta, purus nisl vulputate ante, eu rutrum dui lectus ac lectus. Proin non orci tincidunt, placerat dolor non, pulvinar risus.</p>
+                  <h5 class="slTitle">RIC entities</h5>
+                  <p class="slPara"> The entities listed in the dataset are either reporting or partner entities. The term ‘entity’ has been privileged because there are many cases in historical trade statistics where the trading entity does not correspond to an internationally recognized state but describes a locality, an area or a group of states. The list of reporting entities does not match the list of partner entities. The list of RIC entities includes more than 1400 names. They have all been harmonized and translated into English. The entities are identified according to their type that may be: a country, a city/part of a country, a colonial area, a geographical area or a group of countries. The names of the countries have been defined after the Correlates of War country list (http://correlatesofwar.org). The other RIC names have been created.</p>
 
                 </div></a>
               </li>
@@ -109,8 +126,39 @@
                 </div> -->
 
                 <a ng-href=""><div class="slInfo">
-                  <h5 class="slTitle">Change rate</h5>
-                  <p class="slPara"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. Curabitur auctor nisi non aliquam facilisis. Aliquam at pretium eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut ullamcorper massa. Donec consequat, orci at vulputate porta, purus nisl vulputate ante, eu rutrum dui lectus ac lectus. Proin non orci tincidunt, placerat dolor non, pulvinar risus.</p>
+                  <h5 class="slTitle">Continent</h5>
+                  <p class="slPara"> Each entity (reporting or partner) is located on a continent. When the entity is a ‘group’ or a ‘geographical area’ corresponding to a multiple of entities located on different continents, it is identified by the continent ‘World’. The five major continents (Africa, America, Asia, Europe, Oceania) are present in the database plus “continents” pertaining to sea areas (Adriatic, Antarctic, Atlantic Ocean, Baltic, Mediterranean, Pacific). Turkey, when non-specified in Europe or in Asia, has been located in Asia; Russia/USSR, when non-specified in Europe or in Asia, has been located in Europe.</p>
+
+                </div></a>
+              </li>
+              <li class="storyline">
+
+                <!-- <div class="slImage" >
+                  <img width="200" class="backgroundSL" />
+                  <a ng-href="" class="frontSL hidden">Explore this story</a>
+                </div> -->
+
+                <a ng-href=""><div class="slInfo">
+                  <h5 class="slTitle">World trade / Total trade</h5>
+                  <p class="slPara"> The total trade of an entity corresponds to its trade with the entity partner ‘World’. The total trade of the world (or world trade) is estimated by summing the total trade of all the entities of the database (duplicates are eliminated). There may be up to four estimations of total trade (or trade with partner World):
+                  * World reported: total trade of a reporting entity as it is reported in the statistical source. 
+                  * World sum partners: total trade of reporting entity calculated from the sum of all trade partners flows.
+                  * World sub-reporting: total trade of a reporting entity (for example a city) that is dependent on a larger entity for example a country). 
+                  * World estimated: recent re-estimations of total trade (mettre la liste des pays concernés ?) and estimations of total trade taken from synthetic sources (citer sources Mitchell’s International Historical Statistics; Statistical Abstract of Foreign Countries).
+                  The World best guess is</p>
+
+                </div></a>
+              </li>
+              <li class="storyline">
+
+                <!-- <div class="slImage" >
+                  <img width="200" class="backgroundSL" />
+                  <a ng-href="" class="frontSL hidden">Explore this story</a>
+                </div> -->
+
+                <a ng-href=""><div class="slInfo">
+                  <h5 class="slTitle">Mirror Flows</h5>
+                  <p class="slPara"> The RICardo database offers four bilateral flows for every country pair. A trade flow is recorded twice, by the two partner countries, in two different sources. It is therefore possible to check on the quality of the data by comparing so-called “mirror flows”. The term-to-term comparison of mirror flows (exports from A to B as declared by A and imports from B to A as declared by B) can reveal more or less important differences which are the result either of varying procedures for recording flows by country of origin or destination, or methods for estimating trade flows (c.i.f. vs. f.o.b. estimates, trade types), not forgetting the choice of the exchange rate. The difference between mirror trade flows is such an issue that several studies have been dedicated to its extent and ways to allay its impact (pour en savoir plus, citer WP Dedinger-Girard). To help tackle this issue, the bilateral view shows an estimation of the discrepancy in mirror flows that facilitates the detection of major inconsistencies and provides the user with the opportunity to compare data and ultimately select the more reliable figures. </p>
 
                 </div></a>
               </li>
