--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -113,6 +113,15 @@
       </choices>
       </ui-select>
   </div>
+  by
+  <div class="inline-select">
+      <ui-select ng-model="sorted.selected" theme="bootstrap">
+      <match placeholder="Sort by...">{{$select.selected.name.value}}</match>
+      <choices repeat="item in sorts | filter: $select.search">
+        <div ng-bind-html="item.name.value | highlight: $select.search"></div>
+      </choices>
+      </ui-select>
+  </div>
    
   </h4>
   <div class="row">
@@ -177,6 +186,7 @@
         group-data="grouped.selected.type.value"
         order-data="ordered.selected.type.value"
         filter-data="filtered.selected.type.value"
+        sort-data="sorted.selected.type.value"
         ></partners-histogram>
       </div>
     </div>
