--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -247,7 +247,7 @@
         </p> -->
         <div ng-show="messagePercent"> 
          <p>
-            The percentages are based on the total amount of world sumpartners of {{entities.sourceEntity.selected.RICname}}
+            The percentages are based on the total amount of <a href="/#worldTrade">world sum partners</a> of {{entities.sourceEntity.selected.RICname}}
          </p>
         </div>
     </div>
