--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -31,15 +31,15 @@
     <div id="homeImage" class="row">
       <img ng-src="../img/ricepaper_v3.png" id="backHomeImage"/>
       <div>
-        <h2 id="imgTitle">RICardo</h2>
-        <p id="imgSubtitle">Bilateral trade of all of the world’s countries over the period 1800-1938</p>
+        <h2 id="imgTitle">The RICardo Project</h2>
+        <p id="imgSubtitle">Trade between Nations from ~1800 to 1938</p>
       </div>
       <!-- <img ng-src="images/medea_front-01.png" id="frontHomeImage"/> -->
     </div>
     <div class="container">
       <div >
         <div id="homeSubtitle">
-          Le projet <strong>RICardo</strong> vise à construire une base de données commerciales regroupant des statistiques du commerce bilatéral des pays du monde sur la période 1800-1938, et à la mettre en ligne sous forme de visualisations. Commencé en 2004, ce projet a permis de construire une base de 270 000 flux d'échanges commerciaux (juin 2015) et il est prévu d'ouvrir le site web courant 2016.
+          RICardo (Research on International Commerce) est une base de données sur le commerce bilatéral des pays du monde qui couvre une période de plus de cent ans, allant des débuts de la Révolution industrielle à la veille de la Seconde Guerre mondiale. Le site propose d’explorer l’histoire du commerce international à partir de visualisations des échanges commerciaux entre les pays des différents continents du monde.
         </div>
         </br>
         <p>Vous trouverez ci-dessous les deux <em>working paper</em> qui ont été soumis pour le premier à la revue <em>Historical Methods</em> et le second à l'<em><a href="http://dh2016.adho.org/">Digital Humanities 2016</a></em>.</p>
@@ -64,17 +64,16 @@
       <div class="spaceBetweenParagraphs noFloat">&bull;</div>
       <div class="row workingPaperContainer">
         <div class="col-md-6"> 
-          Le projet RICardo a été initié en 2004 par une équipe d’historiens économistes de Sciences Po dans le but de constituer une base historique de données commerciales. Il est parti du constat que les bases de données existantes étaient généralement construites par des chercheurs isolés pour les besoins d’un travail  de recherche personnel, qu’elles ne couvraient pas l’ensemble des pays du monde, qu’elles ne remontaient pas avant 1870 et qu’elles ne pouvaient être utilisées que par un public spécialisé. Dix ans plus tard, une nouvelle équipe associant historiens, développeurs et designers de Sciences Po élargit le projet à la création d’un site dédié au commerce bilatéral des pays du monde sur la période 1800-1938 (1).
-
-          (1) Depuis la fin de la Seconde Guerre mondiale, ces statistiques sont rassemblées et publiées par les organisations internationales : base Direction of Trade Statistics du FMI (données à partir de 1947) (https://data.imf.org/); base Comtrade des Nations-Unies (données à partir de 1962) (http://comtrade.un.org/). 
+          Le projet RICardo a été initié en 2004 par une équipe d’historiens économistes de Sciences Po dans le but de constituer une base historique de données commerciales. Il est parti du constat que les bases de données existantes étaient généralement construites par des chercheurs isolés pour les besoins d’un travail  de recherche personnel, qu’elles ne couvraient pas l’ensemble des pays du monde, qu’elles ne remontaient pas avant 1870 et qu’elles ne pouvaient être utilisées que par un public spécialisé. Dix ans plus tard, une nouvelle équipe associant historiens, développeurs et designers de Sciences Po élargit le projet à la création d’un site dédié au commerce bilatéral des pays du monde sur la période 1800-1938.
+          </br>
+          Depuis la fin de la Seconde Guerre mondiale, ces statistiques sont rassemblées et publiées par les organisations internationales : base <a href="https://data.imf.org/">Direction of Trade Statistics du FMI</a> (données à partir de 1947); base <a href="http://comtrade.un.org/">Comtrade des Nations-Unies</a> (données à partir de 1962). 
 
         </div>
         <div class="col-md-6"> 
           L’objectif du projet RICardo est de collecter des données sur le commerce bilatéral de tous les pays du monde à partir du début du XIXe siècle (les premières données de la base remontent jusqu’en 1787) jusqu’en 1938 et de les mettre à la disposition d’un large public pour une large palette d’utilisations.  
           Les vizs RICardo permettent de savoir en « un-click » quelles ont été les exportations de l’Inde vers la France en 1841, comment évolue le commerce total de la Chine entre 1864 et 1913, ou encore d’avoir une estimation des exportations mondiales sur la période 1830-1938. Elle facilite l’accès à une vision historique et synthétique du commerce international tout en offrant aux chercheurs spécialisés la possibilité d’exploiter les données pour une recherche plus approfondie. 
-          La base RICardo est une base évolutive. Notre ambition est de continuer à l’améliorer et à la compléter en recueillant de nouvelles sources statistiques commerciales. C’est pourquoi nous invitons les utilisateurs de la base à nous faire part de leurs remarques et à participer à l’évolution de la base.
-
-          (1) Mettre une adresse de contact
+          </br>
+          La base RICardo est une base évolutive. Notre ambition est de continuer à l’améliorer et à la compléter en recueillant de nouvelles sources statistiques commerciales. C’est pourquoi nous invitons les utilisateurs de la base à nous faire part de leurs remarques et suggestions en nous contactant à l'adresse suivante : <a href="mailto:beatrice.dedinger@sciencespo.fr"> beatrice.dedinger@sciencespo.fr </a>
         </div>
 
         </div>
@@ -138,14 +137,34 @@
                   <a ng-href="" class="frontSL hidden">Explore this story</a>
                 </div> -->
 
-                <a ng-href=""><div class="slInfo">
-                  <h5 class="slTitle">World trade / Total trade</h5>
+                <a ng-href="">
+                <div class="slInfo">
+                  <h5 id="worldTrade" class="slTitle">World trade / Total trade</h5>
                   <p class="slPara"> The total trade of an entity corresponds to its trade with the entity partner ‘World’. The total trade of the world (or world trade) is estimated by summing the total trade of all the entities of the database (duplicates are eliminated). There may be up to four estimations of total trade (or trade with partner World):
-                  * World reported: total trade of a reporting entity as it is reported in the statistical source. 
-                  * World sum partners: total trade of reporting entity calculated from the sum of all trade partners flows.
-                  * World sub-reporting: total trade of a reporting entity (for example a city) that is dependent on a larger entity for example a country). 
-                  * World estimated: recent re-estimations of total trade (mettre la liste des pays concernés ?) and estimations of total trade taken from synthetic sources (citer sources Mitchell’s International Historical Statistics; Statistical Abstract of Foreign Countries).
-                  The World best guess is</p>
+                  <ul>
+                    
+                  <li>
+                    World reported: total trade of a reporting entity as it is reported in the statistical source.
+                  </li> 
+                    
+                  <li>
+                    World sum partners: total trade of reporting entity calculated from the sum of all trade partners flows.
+
+                  </li>
+                  <li>
+                    World sub-reporting: total trade of a reporting entity (for example a city) that is dependent on a larger entity for example a country).
+
+                  </li>
+                  <li>
+                    World estimated: recent re-estimations of total trade (mettre la liste des pays concernés ?) and estimations of total trade taken from synthetic sources (citer sources Mitchell’s International Historical Statistics; Statistical Abstract of Foreign Countries).
+
+                  </li>
+                  <li>
+                    
+                  World bestguess: 
+                  </li>
+                  </ul>
+                  </p>
 
                 </div></a>
               </li>
