update views doc

--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -107,7 +107,7 @@
       <!-- <h4>Discrepancies in mirror flows</h4> -->
       <h4>Comparison of {{entities.sourceEntity.selected.RICname}} and {{entities.targetEntity.selected.RICname}} trade statistics</h4>
       <p class="paragraphViz">
-          This view estimates the discrepancies in mirror flows. 
+          This graph estimates the discrepancies in mirror flows. 
         </p>
       <comparison-timeline 
       ng-data="timelineData" 
