--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -41,49 +41,62 @@
         <div id="homeSubtitle">
           RICardo (Research on International Commerce) est une base de données sur le commerce bilatéral des pays du monde qui couvre une période de plus de cent ans, allant des débuts de la Révolution industrielle à la veille de la Seconde Guerre mondiale. Le site propose d’explorer l’histoire du commerce international à partir de visualisations des échanges commerciaux entre les pays des différents continents du monde.
         </div>
-        </br>
-        <p>Vous trouverez ci-dessous les deux <em>working paper</em> qui ont été soumis pour le premier à la revue <em>Historical Methods</em> et le second à l'<em><a href="http://dh2016.adho.org/">Digital Humanities 2016</a></em>.</p>
-        <p>Ces papiers sont tels que soumis et non dans leurs versions finales.</p>
-        <div class="row workingPaperContainer">
-          <div class="col-md-6 workingPaper">
-            <h4>Abstract DH2016</h4>
-            <ul>
-              <li>
-                <a href="http://ricardo.medialab.sciences-po.fr/Girardetal_RICardo_dh2016_fr.pdf">abstract Ricardo DH 2016 (fr)</a>
-              </li>
-              <li>
-                <a href="http://ricardo.medialab.sciences-po.fr/Girardetal_RICardo_dh2016_en.pdf">abstract Ricardo DH 2016 (en)</a> 
-              </li> 
-            </ul>
-          </div>
-          <div class="col-md-6 workingPaper">
-            <h4>Historical Methods</h4>
-            <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf">Working paper historical methods (en) </a>
-          </div>
       </div>
-      <div class="spaceBetweenParagraphs noFloat">&bull;</div>
       <div class="row workingPaperContainer">
+        <div class="spaceBetweenParagraphs noFloat">&bull;</div>
         <div class="col-md-6"> 
-          Le projet RICardo a été initié en 2004 par une équipe d’historiens économistes de Sciences Po dans le but de constituer une base historique de données commerciales. Il est parti du constat que les bases de données existantes étaient généralement construites par des chercheurs isolés pour les besoins d’un travail  de recherche personnel, qu’elles ne couvraient pas l’ensemble des pays du monde, qu’elles ne remontaient pas avant 1870 et qu’elles ne pouvaient être utilisées que par un public spécialisé. Dix ans plus tard, une nouvelle équipe associant historiens, développeurs et designers de Sciences Po élargit le projet à la création d’un site dédié au commerce bilatéral des pays du monde sur la période 1800-1938.
+          Le projet RICardo a été initié en 2004 par une équipe d’historiens économistes de Sciences Po dans le but de constituer une base historique de données commerciales. Il est parti du constat que les bases de données existantes sont généralement construites par des chercheurs isolés pour les besoins d’un travail de recherche personnel, qu’elles ne couvrent pas l’ensemble des pays du monde, qu’elles ne remontent pas avant 1870 et qu’elles ne peuvent être utilisées que par un public spécialisé. Dix ans plus tard, une nouvelle équipe associant historiens, développeurs et designers de Sciences Po élargit le projet à la création d’un site dédié au commerce bilatéral des pays du monde sur la période 1800-1938.
           </br>
           Depuis la fin de la Seconde Guerre mondiale, ces statistiques sont rassemblées et publiées par les organisations internationales : base <a href="https://data.imf.org/">Direction of Trade Statistics du FMI</a> (données à partir de 1947); base <a href="http://comtrade.un.org/">Comtrade des Nations-Unies</a> (données à partir de 1962). 
 
         </div>
         <div class="col-md-6"> 
-          L’objectif du projet RICardo est de collecter des données sur le commerce bilatéral de tous les pays du monde à partir du début du XIXe siècle (les premières données de la base remontent jusqu’en 1787) jusqu’en 1938 et de les mettre à la disposition d’un large public pour une large palette d’utilisations.  
-          Les vizs RICardo permettent de savoir en « un-click » quelles ont été les exportations de l’Inde vers la France en 1841, comment évolue le commerce total de la Chine entre 1864 et 1913, ou encore d’avoir une estimation des exportations mondiales sur la période 1830-1938. Elle facilite l’accès à une vision historique et synthétique du commerce international tout en offrant aux chercheurs spécialisés la possibilité d’exploiter les données pour une recherche plus approfondie. 
+          L’objectif du projet RICardo est de collecter des données sur le commerce bilatéral de tous les pays du monde à partir du début du XIXe siècle jusqu’en 1938 et de les mettre à la disposition d’un large public pour une large palette d’utilisations.  
+          Les views RICardo permettent de savoir en « un-click » quelles ont été les exportations de l’Inde vers la France en 1841, comment évolue le commerce total de la Chine entre 1864 et 1913, ou encore d’avoir une estimation des exportations mondiales sur la période 1830-1938. Elle facilite l’accès à une vision historique et synthétique du commerce international tout en offrant aux chercheurs spécialisés la possibilité d’exploiter les données pour une recherche plus approfondie. 
           </br>
           La base RICardo est une base évolutive. Notre ambition est de continuer à l’améliorer et à la compléter en recueillant de nouvelles sources statistiques commerciales. C’est pourquoi nous invitons les utilisateurs de la base à nous faire part de leurs remarques et suggestions en nous contactant à l'adresse suivante : <a href="mailto:beatrice.dedinger@sciencespo.fr"> beatrice.dedinger@sciencespo.fr </a>
         </div>
 
         </div>
       </div>
+      <div class="container">
+        <div class="spaceBetweenParagraphs noFloat">&bull;</div>
+        <div class="row workingPaperContainer">
+          <div class="col-md-12">
+            <p>Vous trouverez ci-dessous les deux <em>working paper</em> qui ont été soumis pour le premier à la revue <em>Historical Methods</em> et le second à l'<em><a href="http://dh2016.adho.org/">Digital Humanities 2016</a></em>.
+            </p>
+
+            <p>Ces papiers sont tels que soumis et non dans leurs versions finales.</p>
+            
+          </div>
+          
+            <div class="col-md-6 workingPaper">
+              <h4>Abstract DH2016</h4>
+              <ul>
+                <li>
+                  <a href="http://ricardo.medialab.sciences-po.fr/Girardetal_RICardo_dh2016_fr.pdf">abstract Ricardo DH 2016 (fr)</a>
+                </li>
+                <li>
+                  <a href="http://ricardo.medialab.sciences-po.fr/Girardetal_RICardo_dh2016_en.pdf">abstract Ricardo DH 2016 (en)</a> 
+                </li> 
+              </ul>
+            </div>
+            <div class="col-md-6 workingPaper">
+              <h4>Historical Methods</h4>
+              <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf">Working paper historical methods (en) </a>
+            </div>
+          </div>
+
+          <div class="spaceBetweenParagraphs noFloat">&bull;</div>
+      </div>
+      
       <div id="studies" class="page">
         <div class="container">
-          <div class="spaceBetweenParagraphs noFloat">&bull;</div>
           <div>
+          </br>
+          </br>
             <div class="thumbnailStudy" id="studies">
-              <span class="studyTitle">General informations</span>
+              <span class="studyTitle">RICardo Vocabulary</span>
 
             </div>
             <ol class="storylinesContainer">
@@ -143,25 +156,25 @@
                   <p class="slPara"> The total trade of an entity corresponds to its trade with the entity partner ‘World’. The total trade of the world (or world trade) is estimated by summing the total trade of all the entities of the database (duplicates are eliminated). There may be up to four estimations of total trade (or trade with partner World):
                   <ul>
                     
-                  <li>
+                  <li  class="slPara">
                     World reported: total trade of a reporting entity as it is reported in the statistical source.
                   </li> 
                     
-                  <li>
-                    World sum partners: total trade of reporting entity calculated from the sum of all trade partners flows.
+                  <li class="slPara">
+                    World sum partners: total trade of reporting entity equals the sum of all trade partners flows.
 
                   </li>
-                  <li>
-                    World sub-reporting: total trade of a reporting entity (for example a city) that is dependent on a larger entity for example a country).
+                  <li class="slPara">
+                    World sub-reporting: total trade of a reporting entity (for example a city) that is dependent on a larger entity (for example a country).
 
                   </li>
-                  <li>
-                    World estimated: recent re-estimations of total trade (mettre la liste des pays concernés ?) and estimations of total trade taken from synthetic sources (citer sources Mitchell’s International Historical Statistics; Statistical Abstract of Foreign Countries).
+                  <li class="slPara">
+                    World estimated: recent re-estimations of total trade for some countries (for example Belgium or the Netherlands) and estimations of total trade taken from synthetic sources (for example Mitchell's International Historical Statistics).
 
                   </li>
-                  <li>
+                  <li id="worldbestguess" class="slPara">
                     
-                  World bestguess: 
+                  World bestguess: when many estimations for a country's total trade are available, the World best guess is first World estimated, then World reported, then World sum partners.
                   </li>
                   </ul>
                   </p>
@@ -177,7 +190,15 @@
 
                 <a ng-href=""><div class="slInfo">
                   <h5 class="slTitle">Mirror Flows</h5>
-                  <p class="slPara"> The RICardo database offers four bilateral flows for every country pair. A trade flow is recorded twice, by the two partner countries, in two different sources. It is therefore possible to check on the quality of the data by comparing so-called “mirror flows”. The term-to-term comparison of mirror flows (exports from A to B as declared by A and imports from B to A as declared by B) can reveal more or less important differences which are the result either of varying procedures for recording flows by country of origin or destination, or methods for estimating trade flows (c.i.f. vs. f.o.b. estimates, trade types), not forgetting the choice of the exchange rate. The difference between mirror trade flows is such an issue that several studies have been dedicated to its extent and ways to allay its impact (pour en savoir plus, citer WP Dedinger-Girard). To help tackle this issue, the bilateral view shows an estimation of the discrepancy in mirror flows that facilitates the detection of major inconsistencies and provides the user with the opportunity to compare data and ultimately select the more reliable figures. </p>
+
+                  <p class="slPara"> 
+                  The RICardo database offers four bilateral flows for every country pair. A trade flow is recorded twice, by the two partner countries, in two different sources. It is therefore possible to check on the quality of the data by comparing so-called “mirror flows”. The term-to-term comparison of mirror flows (exports from A to B as declared by A and imports from B to A as declared by B) can reveal more or less important differences which are the result either of varying procedures for recording flows by country of origin or destination, or methods for estimating trade flows (c.i.f. vs. f.o.b. estimates, trade types), not forgetting the choice of the exchange rate. The difference between mirror trade flows is such an issue that several studies have been dedicated to its extent and ways to allay its impact.
+                  </p>
+                  <p class="slPara">For more information read this working paper : 
+                    <a href="http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf"> historical methods (en) </a>. 
+                  </p>
+                  <p class="slPara">
+                  To help tackle this issue, the bilateral view shows an estimation of the discrepancy in mirror flows that facilitates the detection of major inconsistencies and provides the user with the opportunity to compare data and ultimately select the more reliable figures. </p>
 
                 </div></a>
               </li>
