--- a/client/partials/world.html
+++ b/client/partials/world.html
@@ -12,7 +12,7 @@
         <!-- <h4>Import and export evolution of World</h4> -->
         <world-title></world-title>
         <p class="paragraphViz">
-         For more information about this graph, report to <a href="">World defintions</a> 
+         For more information about this graph, report to <a href="/#/#worldTrade">World trade / Total trade</a> 
         </p>
         <dual-timeline 
         ng-data="timelineData" 
@@ -86,9 +86,9 @@
 
       <i class="fa fa-info-circle"></i> 
       </h4>
-        <!-- <p class="paragraphViz">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus commodo leo a sagittis. Sed eu efficitur lorem. Phasellus at ex quis arcu accumsan blandit. Integer sit amet pharetra sapien, in tincidunt eros. Sed fringilla, leo ut vehicula cursus, tortor tortor sodales metus, ut pulvinar magna risus sed diam. Maecenas luctus iaculis rutrum. 
-        </p> -->
+        <p class="paragraphViz">
+          In this graph the <a href="/#/#worldTrade">World trade / Total trade</a> of a country is the <a href="/#/#worldbestguess">World best guess</a> 
+        </p>
         <div ng-show="messagePercent"> 
          <p>
             The percentages are based on the total amount of <a href="/#worldTrade"> world bestguess</a> of {{entities.sourceEntity.selected.RICname}}
