--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -130,10 +130,10 @@
       <p class="paragraphViz">
           In this graph, the partners of the reporting country are compared by calculating two indicators: 
           <ul>
-            <li>
+            <li class="paragraphViz">
               the average bilateral trade share estimated for available years over the selected period
             </li>
-            <li>
+            <li class="paragraphViz">
               the relative bilateral trade balance estimated for each available year over the selected period
             </li>
           </ul>
