--- a/client/css/style.css
+++ b/client/css/style.css
@@ -162,10 +162,6 @@ body {
   background-color: white;
 }
 
-/*NavBar */
-
-
-
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
@@ -191,7 +187,6 @@ body > .container {
 #homeImage {
   height: 300px;
   text-align: center;
-  /*background-color: #57AACE;*/
   margin-bottom: 40px;
   position: relative;
   overflow-x: hidden;
@@ -336,7 +331,6 @@ li.storyline {
 }
 
 .slImage {
-  /*display: block;*/
   position: relative;
   margin-bottom: 30px;
   margin-right: 30px;
@@ -778,32 +772,6 @@ h4{
   background: rgba(0, 0, 0, 0.4);
 }
 
-/*.msg {
-  opacity: 1;
-  position: absolute;
-  top: 20%;
-  left: 20%;
-  width: 60%;
-  height: 50%;
-  background-color: #eee;
-  border-radius: 4px;
-  border: 1px solid #555;
-  text-align: center;
-  font-size: 24px;
-  z-index:10000;
-  /*display: table;*/
-}*/
- 
-/*
-  Lastly this is the actual message text. It uses
-  display: table-cell so the vertical alignment
-  works properly.
-*/
-/*.grid-overlay-msg .msg span {
-  vertical-align: middle;
-  z-index: 10;
-}*/
-
 .table-cont{
   margin-bottom: 20px;
   background-color: white;
@@ -852,7 +820,6 @@ font-size: 1.1em;
 /* country */
 
 .filter-group {
-  /*margin: 15px 0;*/
   max-height: 60px;
 }
 
@@ -1042,13 +1009,9 @@ path.lineTrajectory {
 }
 
 .close-btn { 
-    /*border: 1px solid #c2c2c2;*/
     position: relative;
     padding: 1px 5px;
     top: -10px;
-    /*border-radius: 90px;*/
-    /*font-size: 10px;*/
-
 }
 
 #partners-histograms-container {
@@ -1063,18 +1026,15 @@ path.lineTrajectory {
 
 }
 
-/*.node {
-  border: solid 1px white;
-  font: 10px sans-serif;
-  line-height: 12px;
-  overflow: hidden;
-  position: absolute;
-  text-indent: 2px;
+/* Linechart World Message */
+.selectData {
+  height: 400px;
+  width: 1000px;
+  background-color: #f5f5f5;
+  font-size: 16px;
+  margin: auto;
 }
-*/
-/*.lineDateText {
-  background-color: red;
-}*/
+
 
 .node {
   cursor: pointer;
@@ -1102,102 +1062,3 @@ path.lineTrajectory {
   border-left:  solid 1px white;
 }
 
-/*circle packing*/
-/*circle {
-  fill: rgb(31, 119, 180);
-  fill-opacity: .25;
-  stroke: rgb(31, 119, 180);
-  stroke-width: 1px;
-}
-
-.leaf circle {
-  fill: #ff7f0e;
-  fill-opacity: 1;
-}
-
-text {
-  font: 10px sans-serif;
-}*/
-
-
-/* Drop DOwn Menu */
-
-/*.dropdown-submenu {
-    position: relative;
-}
-
-.dropdown-submenu>.dropdown-menu {
-    top: 0;
-    right: 100%;
-    margin-top: -6px;
-    margin-left: -1px;
-    -webkit-border-radius: 0 6px 6px 6px;
-    -moz-border-radius: 0 6px 6px;
-    border-radius: 0 6px 6px 6px;
-}
-
-.dropdown-submenu:hover>.dropdown-menu {
-    display: block;
-}
-
-.dropdown-submenu>a:after {
-    display: block;
-    content: " ";
-    float: left;
-    width: 0;
-    height: 0;
-    border-color: transparent;
-    border-style: solid;
-    border-width: 5px 0 5px 5px;
-    border-left-color: #ccc;
-    margin-top: 5px;
-    margin-right: 10px;
-}
-
-.dropdown-submenu:hover>a:after {
-    border-left-color: #fff;
-}
-
-.dropdown-submenu.pull-right {
-    float: none;
-}
-
-.dropdown-submenu.pull-right>.dropdown-menu {
-    left: -100%;
-    margin-left: 10px;
-    -webkit-border-radius: 6px 0 6px 6px;
-    -moz-border-radius: 6px 0 6px 6px;
-    border-radius: 6px 0 6px 6px;
-}*/
-
-.aboutTitles {
-  text-align: center;
-}
-
-.aboutListAll>ul {
-  list-style-type: none;
-  
-}
-
-.aboutListAll>ul>li {
-padding-left: 10px;
-}
-
-.aboutList>a {
-   text-decoration: none;
-   color: black;
-}
-
-.aboutList:hover {
-   text-decoration: none;
-   color: black;
-   background-color: white;
-   border: solid 1px black;
-}
-
-.aboutEntities {
-  font-size: 16px
-}
-.aboutDate {
-  font-size: 13px
-}
